- Try to remove the second parameter from the pp_iterator<>::force_include
  function.
- Fix the trigraph backslash problem in the re2c (C/C++ and IDL) scanners, if
  there is the end of the (internal) buffer just in between a '??/' and a '\n'.

-------------------------------------------------------------------------------

CHANGELOG

Boost V1.53:
 - Fixed a problem with context<>::add_macro_definition which sometimes 
   appended a superfluous T_EOF to the macro replacement list.

Boost V1.52.0:
 - Added util::create_directories() wrapper to account for new behavior of
   boost::filesystem::create_directories().
 - Fixed an obscure problem when preprocessing directives wouldn't be recognized
   if the previous line contained nothing but an empty macro invocation
   (see new test case t_9_023.cpp)
 - Added a new command line option --license=<file> to the Wave driver tool
   which allows to pre-pend the content of a (license) file to every newly
   created file. This option simplifies the implementation of partial
   preprocessing as done on Phoenix, Fusion, etc.
 - Changed the effect of the -N command line option to simply not expand
   the macro by pretending it was not defined. Earlier the whole invocation
   sequence was skipped, now we skip only the macro itself, which still expands
   the arguments for the macro invocation.
  - Fixed a couple of compilation warnings

Boost V1.51.0
 - Fixed #7050: Invalid memory write bug in lexing_exception
 - Fixed #7159: Text-lines are processed as if they were preprocessing directives
 - Changed --c++0x command line option to --c++11.

Boost V1.50.0
 - V2.3.2
 - Fixed #6758: not all members are initialized by base_iteration_context
   constructor.
 - Fixed #6838: Adding include file with force_include makes Wave fail to emit
   #line directive
 - Added support for test of --forceinclude option to testwave executable,
   added test case verifying #6838 is fixed.
 - Fixed #6870: build wave driver failed

Boost V1.48.0